--- a/scss/components/_inventory.scss
+++ b/scss/components/_inventory.scss
@@ -87,6 +87,9 @@
             border: 1px solid var(--color-border-light-tertiary);
             min-width: 100px;
             max-width: 100px;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
             height: var(--form-field-height);
             line-height: var(--form-field-height);
         }
@@ -96,6 +99,9 @@
             border: 1px solid var(--color-border-light-tertiary);
             min-width: 130px;
             max-width: 130px;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
             height: var(--form-field-height);
             line-height: var(--form-field-height);
         }
@@ -105,6 +111,9 @@
             border: 1px solid var(--color-border-light-tertiary);
             min-width: 180px;
             max-width: 180px;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
             height: var(--form-field-height);
             line-height: var(--form-field-height);
         }
