--- a/scss/components/_spell.scss
+++ b/scss/components/_spell.scss
@@ -141,6 +141,9 @@
             min-width: 40px;
             height: var(--form-field-height);
             line-height: var(--form-field-height);
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
         }
 
 
@@ -210,6 +213,9 @@
                 border-radius: 3px;
                 border: 1px solid var(--color-border-light-tertiary);
                 width: 100%;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
             }
 
             .name-area {
